Bug Fix:  Multiple PDF not visible fixed and made Subject form a saperate component

--- a/clint/src/css/nav.css
+++ b/clint/src/css/nav.css
@@ -114,6 +114,9 @@ li{
 li img{
   height: 2rem;
 }
+.lisp{
+  background-color: var(--primary-color-darker-10);
+}
 .burgur , .burgur2{
   height: 3rem;
   width: 3rem;
